--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-smooth-list": "^1.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
